@startuml
namespace multi-simulator {
    class "MultiConfig" << (S,Aquamarine) >> {
        + DeviceCount int
        + DevicePrefix string
        + MQTTBroker string
        + RawBroker string
        + PublishRaw bool
        + StatusPort int
        + Sensors []SensorTemplate
        + PIP config.PIPConfig

    }
    class "SensorTemplate" << (S,Aquamarine) >> {
        + DatastreamID string
        + Type string
        + Interval string
        + DatasetDir string
        + DatasetFile string

    }
    class "deviceInstance" << (S,Aquamarine) >> {
        - manager *device.Manager
        - client *mqtt.Client
        - rawClient *mqtt.Client

    }
    class "statusResponse" << (S,Aquamarine) >> {
        + DeviceCount int
        + Devices []device.DeviceStatus

    }
    class "main" << (M,Orchid) >> {
        + loadMultiConfig(path string) (*MultiConfig, error)
        + buildDeviceConfig(mc *MultiConfig, deviceNum int) *config.Config
        + startStatusServer(port int, devices *[]deviceInstance, mu *sync.Mutex)
        + main()

    }
}


"multi-simulator.MultiConfig" o-- "config.PIPConfig"
"multi-simulator.MultiConfig" o-- "multi-simulator.SensorTemplate"
"multi-simulator.statusResponse" o-- "device.DeviceStatus"

"multi-simulator.deviceInstance" o-- "device.Manager"
"multi-simulator.deviceInstance" o-- "mqtt.Client"

"multi-simulator.main" ..> "multi-simulator.MultiConfig"
"multi-simulator.main" ..> "multi-simulator.deviceInstance"


@enduml
